--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,47 @@
 {
-  "extends": "next/core-web-vitals"
+	"extends": [
+		"next/core-web-vitals",
+		"airbnb"
+	],
+	"settings": {
+		"import/resolver": {
+			"jsconfig": {
+				"config": "jsconfig.json"
+			}
+		}
+	},
+	"rules": {
+		"indent": [
+			2,
+			"tab",
+			{
+				"SwitchCase": 1,
+				"VariableDeclarator": 1
+			}
+		],
+		"react/jsx-indent": [2, "tab"],
+		"react/jsx-indent-props": [2, "tab"],
+		"no-tabs": 0,
+		"max-len": [
+			1,
+			{
+				"code": 120,
+				"tabWidth": 1,
+				"ignoreComments": true,
+				"ignoreTrailingComments": true,
+				"ignoreUrls": true,
+				"ignoreStrings": true,
+				"ignoreTemplateLiterals": true,
+				"ignoreRegExpLiterals": true
+			}
+		],
+		"react/react-in-jsx-scope": 0,
+		"react/jsx-filename-extension": 0,
+		"import/prefer-default-export": 0,
+		"react/jsx-props-no-spreading": 0,
+		"react/require-default-props": 0,
+		"no-template-curly-in-string": 0,
+		"no-underscore-dangle": 0,
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": false, "optionalDependencies": false, "peerDependencies": false}]
+  }
 }
