--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "bootstrap": "^5.2.3",
     "lodash": "^4.17.21",
     "next": "13.1.1",
     "node-sass": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.57.1"
   },
   "devDependencies": {
     "eslint": "8.31.0",
