--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,13 @@
 		"react/require-default-props": 0,
 		"no-template-curly-in-string": 0,
 		"no-underscore-dangle": 0,
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": false, "optionalDependencies": false, "peerDependencies": false}]
+		"react/function-component-definition": [
+			"error",
+			{
+			  "namedComponents": ["function-declaration", "arrow-function"],
+			  "unnamedComponents": "arrow-function"
+			}
+		],
+    	"import/no-extraneous-dependencies": ["error", {"devDependencies": false, "optionalDependencies": false, "peerDependencies": false}]
   }
 }
