--- a/.github/workflows/styleguide.yml
+++ b/.github/workflows/styleguide.yml
@@ -1,5 +1,3 @@
-# .github/workflows/build-and-deploy.yml
-
 name: Node.js CI
 
 on:
@@ -12,14 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # https://github.com/actions/checkout
       - uses: actions/checkout@v3
-
-      # a standard step for GitHub actions on Node
-      # https://github.com/actions/setup-node
       - uses: actions/setup-node@v3
         with:
-          # update the Node version to meet your needs
           node-version: 16
           cache: npm
 
@@ -31,8 +24,7 @@ jobs:
           touch out/.nojekyll
 
       - name: Deploy
-        # https://github.com/JamesIves/github-pages-deploy-action
-        uses: JamesIves/github-pages-deploy-action@4.4.0
+        uses: JamesIves/github-pages-deploy-action
         with:
           branch: gh-pages
           folder: out
