--- a/.github/workflows/styleguide.yml
+++ b/.github/workflows/styleguide.yml
@@ -1,30 +1,30 @@
-name: Node.js CI
+# name: Node.js CI
 
-on:
-  push:
-    branches: [ main ]
+# on:
+#   push:
+#     branches: [ main ]
 
-jobs:
-  build:
+# jobs:
+#   build:
 
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: npm
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: 16
+#           cache: npm
 
-      - name: Build
-        run: |
-          npm ci
-          npm run build
-          npm run export
-          touch out/.nojekyll
+#       - name: Build
+#         run: |
+#           npm ci
+#           npm run build
+#           npm run export
+#           touch out/.nojekyll
 
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action
-        with:
-          branch: gh-pages
-          folder: out
+#       - name: Deploy
+#         uses: JamesIves/github-pages-deploy-action
+#         with:
+#           branch: gh-pages
+#           folder: out
