--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@shopify/theme-images": "^4.1.1",
     "@svgr/webpack": "^6.5.1",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "lodash": "^4.17.21",
     "next": "13.1.1",
