--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@svgr/webpack": "^6.5.1",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "crypto-js": "^4.1.1",
+    "jquery": "^3.6.4",
     "lodash": "^4.17.21",
     "next": "13.1.1",
     "node-sass": "^8.0.0",
