--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sass": "^1.62.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.18",
     "eslint": "8.31.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.1.1",
@@ -34,6 +35,8 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
-    "file-loader": "^6.2.0"
+    "file-loader": "^6.2.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
