86env4r3y update extends

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,5 @@
 {
-	"extends": [
-		"next/core-web-vitals",
-		"airbnb",
-		"next/babel"
-	],
+	"extends": ["next/babel","next/core-web-vitals"],
 	"settings": {
 		"import/resolver": {
 			"jsconfig": {
