--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,8 @@
 {
 	"extends": [
+		"next",
 		"next/core-web-vitals",
-		"airbnb",
-		"next"
+		"airbnb"
 	],
 	"settings": {
 		"import/resolver": {
