--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "jquery": "^3.6.4",
     "lodash": "^4.17.21",
     "next": "13.1.1",
-    "node-sass": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -27,6 +26,8 @@
     "sass": "^1.62.1"
   },
   "devDependencies": {
+    "@types/node": "^20.11.29",
+    "@types/react": "^18.2.67",
     "autoprefixer": "^10.4.18",
     "eslint": "8.31.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -37,6 +38,7 @@
     "eslint-plugin-react": "^7.32.2",
     "file-loader": "^6.2.0",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.2"
   }
 }
