--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,15 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
+    "paths": {
+      "@/components/*": ["components/*"],
+      "@/compounds/*": ["compounds/*"],
+      "@/sections/*": ["sections/*"],
+      "@/templates/*": ["templates/*"],
+      "@/images/icons/*": ["images/icons/*"],
+      "@/config": ["config"],
+      "@/modules/*": ["modules/*"]
+    },
     "target": "es5",
     "lib": [
       "dom",
