--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,9 @@
 {
 	"extends": [
-		"next/babel",
+		// "next/babel",
 		"next/core-web-vitals",
-		"airbnb",
-		"next"
+		"airbnb"
+		// "next"
 	],
 	"settings": {
 		"import/resolver": {
