--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "crypto-js": "^4.1.1",
     "jquery": "^3.6.4",
     "lodash": "^4.17.21",
-    "next": "13.1.1",
+    "next": "^14.1.4",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.62.1"
   },
   "devDependencies": {
@@ -31,7 +31,7 @@
     "autoprefixer": "^10.4.18",
     "eslint": "8.31.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "13.1.1",
+    "eslint-config-next": "^14.1.4",
     "eslint-import-resolver-jsconfig": "^1.1.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
