--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cocoandeve-react-styleguides",
   "version": "0.1.2",
   "private": true,
+  "main": "src/index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
