--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "baseUrl": "src",
-    "jsx": "react",
     "paths": {
       "@/components/*": ["components/*"],
       "@/compounds/*": ["compounds/*"],
@@ -34,8 +33,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-  ],
+    "**/*.tsx",
+    "**/*.jsx"  ],
   "exclude": [
     "node_modules"
   ]
