--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "export": "next export"
   },
   "dependencies": {
+    "@bdenzer/react-modal": "^1.0.0",
     "@headlessui/react": "^1.7.18",
     "@shopify/theme-images": "^4.1.1",
     "@svgr/webpack": "^6.5.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "crypto-js": "^4.2.0",
+    "embla-carousel-react": "^8.0.0",
     "jquery": "^3.6.4",
     "lodash": "^4.17.21",
     "next": "^14.1.4",
