--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.2.3",
     "crypto-js": "^4.2.0",
     "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^11.0.18",
     "jquery": "^3.6.4",
     "lodash": "^4.17.21",
     "next": "^14.1.4",
@@ -26,7 +27,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "sass": "^1.62.1"
+    "react-spring": "^9.7.3",
+    "sass": "^1.62.1",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.29",
