--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "crypto-js": "^4.2.0",
+    "embla-carousel": "^8.0.0",
+    "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.18",
     "jquery": "^3.6.4",
