--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "**/*.jsx"  ],
+    "**/*.jsx",
+    "**/*.js"],
   "exclude": [
     "node_modules"
   ]
