--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.18",
+    "html-react-parser": "^5.1.10",
     "jquery": "^3.6.4",
     "lodash": "^4.17.21",
     "next": "^14.1.4",
