--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.29",
     "@types/node": "^20.11.29",
     "@types/react": "^18.2.67",
     "autoprefixer": "^10.4.18",
