collection template update

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "~/images/*": ["images/*"],
       "~/config": ["config"],
       "~/secret": ["secret"],
-      "~/modules/*": ["modules/*"]
+      "~/modules/*": ["modules/*"],
+      "~/hooks/*": ["hooks/*"]
     },
     "target": "es5",
     "lib": [
