--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "crypto-js": "^4.2.0",
     "embla-carousel": "^8.0.0",
+    "embla-carousel-auto-height": "^8.1.3",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.18",
