collection template update

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@svgr/webpack": "^6.5.1",
     "axios": "^1.4.0",
     "crypto-js": "^4.2.0",
-    "embla-carousel": "^8.0.0",
-    "embla-carousel-auto-height": "^8.0.0",
-    "embla-carousel-autoplay": "^8.0.0",
-    "embla-carousel-react": "^8.0.0",
+    "embla-carousel": "8.0.0",
+    "embla-carousel-auto-height": "8.0.0",
+    "embla-carousel-autoplay": "8.0.0",
+    "embla-carousel-react": "8.0.0",
     "framer-motion": "^11.0.18",
     "html-react-parser": "^5.1.10",
     "jquery": "^3.6.4",
